--- a/Gumroad 2.0/Gumroad 2.0/Main/Main.storyboard
+++ b/Gumroad 2.0/Gumroad 2.0/Main/Main.storyboard
@@ -46,9 +46,89 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CYo-9f-rD5">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CYo-9f-rD5">
                                 <rect key="frame" x="0.0" y="130" width="414" height="732"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="sectionIndexBackgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductTableViewCell" rowHeight="561" id="xi2-vB-sB0" customClass="ProductTableViewCell" customModule="Gumroad_2_0" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="561"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xi2-vB-sB0" id="1xL-TT-Gg3">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="561"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ff-B2-hYe">
+                                                    <rect key="frame" x="20.5" y="14" width="373" height="533"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="xsy-FX-2nx">
+                                                            <rect key="frame" x="0.0" y="0.0" width="373" height="533"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fei-M5-Qal">
+                                                                    <rect key="frame" x="0.5" y="0.0" width="372.5" height="372.5"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="fei-M5-Qal" secondAttribute="height" id="VOW-Fh-4Aw"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zv5-J8-sKr">
+                                                                    <rect key="frame" x="20" y="389.5" width="333" height="79"/>
+                                                                    <string key="text">Label
+Label
+Label</string>
+                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By Nathan Chan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNt-5g-irb">
+                                                                    <rect key="frame" x="20" y="485.5" width="333" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmG-Yo-SfQ">
+                                                                    <rect key="frame" x="66.5" y="523" width="240" height="10"/>
+                                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="10" id="8Y8-XJ-Ge7"/>
+                                                                    </constraints>
+                                                                </view>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="hNt-5g-irb" firstAttribute="width" secondItem="zv5-J8-sKr" secondAttribute="width" id="Ec5-UN-cAd"/>
+                                                                <constraint firstItem="zv5-J8-sKr" firstAttribute="centerX" secondItem="xsy-FX-2nx" secondAttribute="centerX" id="LDT-63-MiG"/>
+                                                                <constraint firstItem="lmG-Yo-SfQ" firstAttribute="width" secondItem="xsy-FX-2nx" secondAttribute="width" multiplier="0.643432" id="LQC-y1-h8B"/>
+                                                                <constraint firstItem="lmG-Yo-SfQ" firstAttribute="centerX" secondItem="xsy-FX-2nx" secondAttribute="centerX" id="Lak-D8-NyK"/>
+                                                                <constraint firstItem="hNt-5g-irb" firstAttribute="centerX" secondItem="zv5-J8-sKr" secondAttribute="centerX" id="V0f-aM-AVC"/>
+                                                                <constraint firstItem="zv5-J8-sKr" firstAttribute="leading" secondItem="xsy-FX-2nx" secondAttribute="leading" constant="20" id="fcU-ZM-WBU"/>
+                                                                <constraint firstAttribute="trailing" secondItem="zv5-J8-sKr" secondAttribute="trailing" constant="20" id="n4b-Sx-KSO"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="xsy-FX-2nx" secondAttribute="trailing" id="3DI-6A-Bbn"/>
+                                                        <constraint firstAttribute="bottom" secondItem="xsy-FX-2nx" secondAttribute="bottom" id="jGV-d7-B79"/>
+                                                        <constraint firstItem="xsy-FX-2nx" firstAttribute="top" secondItem="8Ff-B2-hYe" secondAttribute="top" id="mpE-2e-5st"/>
+                                                        <constraint firstItem="xsy-FX-2nx" firstAttribute="leading" secondItem="8Ff-B2-hYe" secondAttribute="leading" id="o5I-Wt-2Z0"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="8Ff-B2-hYe" firstAttribute="width" secondItem="1xL-TT-Gg3" secondAttribute="width" multiplier="0.9" id="8Yx-GN-PHY"/>
+                                                <constraint firstItem="8Ff-B2-hYe" firstAttribute="centerX" secondItem="1xL-TT-Gg3" secondAttribute="centerX" id="DKB-Bu-tV3"/>
+                                                <constraint firstItem="8Ff-B2-hYe" firstAttribute="height" secondItem="1xL-TT-Gg3" secondAttribute="height" multiplier="0.95" id="bby-LY-FD3"/>
+                                                <constraint firstItem="8Ff-B2-hYe" firstAttribute="centerY" secondItem="1xL-TT-Gg3" secondAttribute="centerY" id="gBw-gw-kCI"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="creatorLabel" destination="hNt-5g-irb" id="GGx-RW-qLI"/>
+                                            <outlet property="nameLabel" destination="zv5-J8-sKr" id="MBz-x8-lhH"/>
+                                            <outlet property="productImage" destination="fei-M5-Qal" id="iiA-Cb-Vbd"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SE3-2T-fCz">
                                 <rect key="frame" x="351" y="44" width="48" height="30"/>
@@ -60,7 +140,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="DrB-au-QqP" firstAttribute="top" secondItem="SE3-2T-fCz" secondAttribute="bottom" id="A5b-Ar-5Yn"/>
                             <constraint firstItem="Mkq-Vh-2gq" firstAttribute="trailing" secondItem="SE3-2T-fCz" secondAttribute="trailing" constant="15" id="Tkl-4A-pTj"/>
@@ -82,7 +162,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SLk-8b-GdB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2002.8985507246377" y="87.723214285714278"/>
+            <point key="canvasLocation" x="1086.9565217391305" y="87.723214285714278"/>
         </scene>
     </scenes>
     <resources>
