--- a/Gumroad 2.0/Gumroad 2.0/Main/Main.storyboard
+++ b/Gumroad 2.0/Gumroad 2.0/Main/Main.storyboard
@@ -141,6 +141,25 @@ Label</string>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="8Ey-gD-VOX">
+                                <rect key="frame" x="0.0" y="130" width="414" height="32.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CREATOR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OxB-BX-fxr">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4NT-s1-Rau" userLabel="Spacer">
+                                        <rect key="frame" x="0.0" y="32.5" width="414" height="0.0"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" id="WCk-CW-60k"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SE3-2T-fCz">
                                 <rect key="frame" x="351" y="44" width="48" height="30"/>
                                 <state key="normal" title="Logout">
@@ -154,12 +173,15 @@ Label</string>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="DrB-au-QqP" firstAttribute="top" secondItem="SE3-2T-fCz" secondAttribute="bottom" id="A5b-Ar-5Yn"/>
+                            <constraint firstItem="8Ey-gD-VOX" firstAttribute="centerX" secondItem="Mkq-Vh-2gq" secondAttribute="centerX" id="K1g-vd-XQs"/>
                             <constraint firstItem="Mkq-Vh-2gq" firstAttribute="trailing" secondItem="SE3-2T-fCz" secondAttribute="trailing" constant="15" id="Tkl-4A-pTj"/>
                             <constraint firstItem="CYo-9f-rD5" firstAttribute="top" secondItem="DrB-au-QqP" secondAttribute="bottom" id="Ux6-K6-dl6"/>
+                            <constraint firstItem="8Ey-gD-VOX" firstAttribute="top" secondItem="DrB-au-QqP" secondAttribute="bottom" id="WwT-OL-O3C"/>
                             <constraint firstItem="Mkq-Vh-2gq" firstAttribute="bottom" secondItem="CYo-9f-rD5" secondAttribute="bottom" id="Xvd-Fo-FFJ"/>
                             <constraint firstItem="SE3-2T-fCz" firstAttribute="top" secondItem="Mkq-Vh-2gq" secondAttribute="top" id="Z6W-Z1-RzL"/>
                             <constraint firstItem="Mkq-Vh-2gq" firstAttribute="trailing" secondItem="DrB-au-QqP" secondAttribute="trailing" constant="10" id="feP-LL-g1Q"/>
                             <constraint firstItem="CYo-9f-rD5" firstAttribute="centerX" secondItem="Mkq-Vh-2gq" secondAttribute="centerX" id="gj0-K0-T2q"/>
+                            <constraint firstItem="8Ey-gD-VOX" firstAttribute="width" secondItem="OOK-89-0pB" secondAttribute="width" id="rgQ-Sx-eDh"/>
                             <constraint firstItem="CYo-9f-rD5" firstAttribute="width" secondItem="OOK-89-0pB" secondAttribute="width" id="tFX-m8-Kju"/>
                             <constraint firstItem="DrB-au-QqP" firstAttribute="leading" secondItem="Mkq-Vh-2gq" secondAttribute="leading" constant="2" id="uaT-Sy-dJN"/>
                         </constraints>
@@ -167,6 +189,7 @@ Label</string>
                     </view>
                     <tabBarItem key="tabBarItem" title="Library" selectedImage="book.fill" catalog="system" id="kwc-B1-CN7"/>
                     <connections>
+                        <outlet property="filterStackView" destination="8Ey-gD-VOX" id="FRf-6R-HeP"/>
                         <outlet property="searchBar" destination="Zxn-fK-O1o" id="ALH-tt-wSA"/>
                         <outlet property="tableView" destination="CYo-9f-rD5" id="DvN-uS-Blx"/>
                     </connections>
